# comlink-python

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README_SwgohComlink.md  README_SwgohComlinkAsync.md  Test Results - pytest_for_test_utils_test_get_async_player_both_player_id_and_allycode.html  commitlint.config.cjs  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_improvement_req.yml  feature_request.yml  report-bug.yml  request-feature.yml
.github/workflows/: ci-cd.yml  ci.yml  commit-lint.yml  commitlint.yml  docs.yml  integration.yml  labeler.yml  on_push.yml  python-package.yml  release.yml  swgoh-comlink-hmac.yml  swgoh-comlink.yml  test.yml  tests.yml
.github/workflows/UnderDevelopment/: publish.yml
.run/: pytest in test_utils.py.run.xml
DataBuilder/: index.html
Logging/: index.html
Stash/: test.yml
StatCalc/: index.html
SwgohComlink/: index.html
SwgohComlinkAsync/: index.html
SwgohComlinkAsync_class/: index.html
SwgohComlink_class/: index.html
Utils/: index.html
comlink_python/: DataBuilder.py  StatCalc.py  SwgohComlink.py  SwgohComlinkAsync.py  __init__.py  const.py
docs/: SwgohComlink.md  SwgohComlinkAsync.md  examples.md  index.md  logging.md  migration.md  style.css  swgoh_comlink.md  swgoh_comlink_async.md  utils.md
docs/References/: SwgohComlinkAsync_class.md  SwgohComlink_class.md
docs/api/: async.md  comlink.md  exceptions.md  helpers.md  statcalc.md
docs/style/: mkdocstrings-bak.css  mkdocstrings.css
docs/stylesheets/: extra.css
examples/: README.md  calc_stats_local.py  get_events.py  get_guild.py  search_for_guilds.py  threaded_player_fetch.py
examples/Async/: README.md  calc_stats_local.py  concurrent_requests.py  get_events.py  get_gac_brackets.py  get_gac_leaderboard.py  get_game_data.py  get_guild.py  get_guild_leaderboard.py  get_language_bundle.py  get_latest_game_data_version.py  get_location_bundle.py  get_player.py  get_player_arena_profile.py  search_for_guilds.py  streaming_guild_roster.py  streaming_guild_roster_advanced.py
examples/SwgohComlink/: README.md  get_events.py  get_gac_leaderboard.py  get_guild.py  get_guild_leaderboard.py  get_guild_members_with_custom_logging.py  get_latest_game_data_version.py  get_location_bundle.py  get_player.py  get_player_arena_profile.py  search_for_guilds.py
examples/SwgohComlinkAsync/: README.md  get_events.py  get_gac_leaderboard.py  get_guild.py  get_guild_leaderboard.py  get_latest_game_data_version.py  get_location_bundle.py  get_player.py  get_player_arena_profile.py  search_for_guilds.py
examples/Sync/: README.md  calc_stats_local.py  get_events.py  get_gac_brackets.py  get_game_data.py  get_guild_leaderboard.py  get_language_bundle.py  get_latest_game_data_version.py  get_location_bundle.py  get_location_bundle_adv.py  get_player.py
parity/js/: statCalculator.js
parity/scripts/: run_js_parity.js  run_js_player_parity.js  run_parity.py  run_player_parity.py
pytests/: conftest.py  data.py  test_get_enums.py  test_get_game_data.py  test_get_guild_by_criteria.py  test_get_guild_by_name.py  test_get_localization_bundle.py  test_get_metadata.py  test_get_player.py  test_get_player_arena.py  test_get_unit_stats.py
pytests/SwgohComlink/: test_get_enums.py  test_get_game_data.py  test_get_guild_by_criteria.py  test_get_guild_by_name.py  test_get_localization_bundle.py  test_get_metadata.py  test_get_player.py  test_get_player_arena.py  test_get_unit_stats.py
pytests/SwgohComlinkAsync/: test_async_get_enums.py  test_async_get_game_data.py  test_async_get_guild.py  test_async_get_localization_bundle.py  test_async_get_player.py  test_async_get_unit_stats.py
pytests/Utils/: test_get_guild_members.py
scripts/: build  check  clean  coverage  install  publish  test  verify-upstream.sh
src/swgoh_comlink/: Core.py  DataBuilder.py  StatCalc.py  SwgohComlink.py  SwgohComlinkAsync.py  Utils.py  __init__.py  _base.py  _const.py  const.py  constants.py  core.py  data_builder.py  exceptions.py  globals.py  helpers.py  stat_calc.py  swgoh_comlink.py  swgoh_comlink_async.py  utils.py  version.py
src/swgoh_comlink.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/swgoh_comlink/Base/: __init__.py  swgoh_comlink_base.py
tests/: conftest.py  integration_support.py  name_key_result.json  test_base_client.py  test_core.py  test_gac_helpers.py  test_get_enums.py  test_get_game_data.py  test_get_guild_by_criteria.py  test_get_guild_by_name.py  test_get_localization_bundle.py  test_get_metadata.py  test_get_player.py  test_get_player_arena.py  test_get_unit_stats.py  test_mock_swgoh_comlink.py  test_utils.py
tests/Core/: test_access_and_secret_keys.py  test_constants.py  test_core.py  test_instance_creation_options.py
tests/SwgohComlink/: test_get_gac_leaderboards.py  test_get_game_data.py  test_get_localization_bundle.py  test_get_player.py  test_get_unit_stats.py
tests/SwgohComlinkAsync/: test_async_get_game_data.py  test_async_get_guild.py  test_async_get_player.py  test_async_get_unit_stats.py
tests/SwgohComlinkBase/: test_swgoh_comlink_base.py
tests/integration/: conftest.py  test_async_client.py  test_hmac.py  test_sync_client.py
tests/manual/: manual-test.py
tests/master/: eng_us_units.txt  fre_fr_master.json  skills.json
tests/resources/: example-player.json
tests/statcalc/: test_calc_char_stats_offline.py  test_import.py  test_parity.py
tests/unit/: test_async_client_mocked.py  test_base.py  test_builder_base.py  test_calculator.py  test_client_request_mocked.py  test_helpers.py  test_helpers_mocked.py  test_migrate.py  test_parse_loc_zip.py  test_statcalc_async.py
tests/utils/: test_get_guild_members.py  test_utils.py  test_utils_get_async_player.py  test_utils_get_current_gac_events.py  test_utils_get_gac_brackets.py
(+70 files in other folders)
