[build-system]
requires = ["setuptools>=75.8.1", "requests>=2.32.4", "sentinels"]
build-backend = "setuptools.build_meta"

[project]
name = "swgoh_comlink"
dynamic = ["version"]
authors = [
    { name = "Mar Trepodi", email = "martrepodi@gmail.com" },
]
description = "Python 3 interface library for swgoh-comlink (https://github.com/swgoh-utils/swgoh-comlink)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hatch>=1.14.2",
    "hatchling>=1.27.0",
    "requests>=2.32.4",
    "sentinels",
    "setuptools>=75.8.1",
]

[project.urls]
"Homepage" = "https://github.com/swgoh-utils/comlink-python"
"Bug Tracker" = "https://github.com/swgoh-utils/comlink-python/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.dynamic]
version = { attr = "swgoh_comlink.version" }

[tool.hatch.version]
path = 'src/swgoh_comlink/version.py'

[tool.hatch.build.targets.wheel]
packages = ["src/swgoh_comlink"]

[tool.semantic_release]
version_variable = [# List of possible location of version
    "src/swgoh_comlink/version.py",
]
version_pattern = "src/swgoh_comlink/version.py:__version__ = '{version}'"   # source location of version string
version_source = "commit"                                                    # Set version source to "commit" so that
branch = "main"                                                              # branch to make releases of
changelog_file = "CHANGELOG.md"                                              # changelog file
build_command = "pip install -r requirements.txt && pip install build && python3 -m build"  # build dists
dist_path = "dist/"                                                          # where to put dists
upload_to_release = false                                                    # auto-create GitHub release
upload_to_pypi = false                                                       # don't auto-upload to PyPI
remove_dist = true                                                           # don't remove dists
patch_without_tag = true                                                     # patch release by default

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.tools]
match = "2.0-development"
prerelease = true
prerelease_token = "rc"

[tool.uv.sources]
swgoh-comlink = { workspace = true }

[dependency-groups]
dev = [
    "swgoh-comlink",
]
