[build-system]
requires = ["setuptools>=75.8.1", "requests>=2.32.4", "sentinels"]
build-backend = "setuptools.build_meta"

[project]
name = "swgoh_comlink"
dynamic = ["version"]
authors = [
    { name = "Mar Trepodi", email = "martrepodi@gmail.com" },
]
description = "Python 3 interface library for swgoh-comlink (https://github.com/swgoh-utils/swgoh-comlink)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hatch>=1.14.2",
    "hatchling>=1.27.0",
    "requests>=2.32.4",
    "sentinels",
    "setuptools>=75.8.1",
]

[project.urls]
"Homepage" = "https://github.com/swgoh-utils/comlink-python"
"Bug Tracker" = "https://github.com/swgoh-utils/comlink-python/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.dynamic]
version = { attr = "swgoh_comlink.version" }

[tool.hatch.version]
path = 'src/swgoh_comlink/version.py'

[tool.hatch.build.targets.wheel]
packages = ["src/swgoh_comlink"]

[tool.semantic_release]
version_variable = [# List of possible location of version
    "src/swgoh_comlink/version.py",
]
version_pattern = "src/swgoh_comlink/version.py:__version__ = '{version}'"   # source location of version string
version_source = "commit"                                                    # Set version source to "commit" so that
branch = "main"                                                              # branch to make releases of
changelog_file = "CHANGELOG.md"                                              # changelog file
build_command = "pip install -r requirements.txt && pip install build && python3 -m build"  # build dists
dist_path = "dist/"                                                          # where to put dists
upload_to_release = false                                                    # auto-create GitHub release
upload_to_pypi = false                                                       # don't auto-upload to PyPI
remove_dist = true                                                           # don't remove dists
patch_without_tag = true                                                     # patch release by default

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.tools]
match = "2.0-development"
prerelease = true
prerelease_token = "rc"

[tool.uv.sources]
swgoh-comlink = { workspace = true }

[dependency-groups]
dev = [
    "swgoh-comlink",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.8",
]

# ── Ruff ─────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (Python version upgrades)
    "B",      # flake8-bugbear (common bug patterns)
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line length — enforced at 120 by formatter, not linter
    "UP009",  # utf-8 encoding declarations — existing codebase convention
    "SIM108", # ternary operator — style preference, too many existing instances
    "SIM118", # dict.keys() — style preference, too many existing instances
]

[tool.ruff.lint.per-file-ignores]
# Existing violations to address incrementally — do not add new suppressions
"src/swgoh_comlink/__init__.py" = ["UP036"]   # outdated version block (sys.exit check)
"src/swgoh_comlink/exceptions.py" = ["B904"]  # raise-without-from (tracked in issue backlog)
"src/swgoh_comlink/swgoh_comlink.py" = ["B904"]  # raise-without-from in _post() and get_enums()
"src/swgoh_comlink/helpers.py" = ["B007", "B904", "SIM102"]  # existing patterns to clean up

[tool.ruff.lint.isort]
known-first-party = ["swgoh_comlink"]

[tool.ruff.format]
quote-style = "double"

# ── Mypy ─────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# TODO: tighten these as type annotations improve
disallow_untyped_defs = false
check_untyped_defs = true

# ── Coverage ─────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["swgoh_comlink"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
