[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "swgoh_comlink"
dynamic = ["version"]
authors = [
    { name = "Mar Trepodi", email = "martrepodi@gmail.com" },
]
description = "Python 3 interface library for swgoh-comlink (https://github.com/swgoh-utils/swgoh-comlink)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28",
    "sentinels>=1.0",
]

[project.scripts]
swgoh-migrate = "swgoh_comlink.migrate:main"

[project.urls]
"Homepage" = "https://github.com/swgoh-utils/comlink-python"
"Bug Tracker" = "https://github.com/swgoh-utils/comlink-python/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require an accessible comlink service",
    "parity: tests that compare python stat calculation against JS baseline",
]

[tool.hatch.version]
path = 'src/swgoh_comlink/version.py'

[tool.hatch.build.targets.wheel]
packages = ["src/swgoh_comlink"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
    "/mkdocs.yml",
]

[tool.uv.sources]
swgoh-comlink = { workspace = true }

[dependency-groups]
dev = [
    "swgoh-comlink",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.35",
    "pytest-asyncio>=0.24",
    "mypy>=1.0",
    "ruff>=0.8",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.28.0",
]

# ── Ruff ─────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (Python version upgrades)
    "B",      # flake8-bugbear (common bug patterns)
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line length — enforced at 120 by formatter, not linter
    "UP009",  # utf-8 encoding declarations — existing codebase convention
    "SIM108", # ternary operator — style preference, too many existing instances
    "SIM118", # dict.keys() — style preference, too many existing instances
]

[tool.ruff.lint.per-file-ignores]
# Existing violations to address incrementally — do not add new suppressions
"src/swgoh_comlink/__init__.py" = ["UP036"]   # outdated version block (sys.exit check)
"src/swgoh_comlink/exceptions.py" = ["B904"]  # raise-without-from (tracked in issue backlog)
"src/swgoh_comlink/helpers/*.py" = ["B007", "B904", "SIM102"]  # existing patterns to clean up

[tool.ruff.lint.isort]
known-first-party = ["swgoh_comlink"]

[tool.ruff.format]
quote-style = "double"

# ── Mypy ─────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# TODO: tighten these as type annotations improve
disallow_untyped_defs = false
check_untyped_defs = true

# ── Coverage ─────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["swgoh_comlink"]

[tool.coverage.report]
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

# ── Semantic Release ─────────────────────────────────────────────────────

[tool.semantic_release]
version_variable = [
    "src/swgoh_comlink/version.py"
]
version_pattern = "src/swgoh_comlink/version.py:__version__ = '{version}'"
version_source = "commit"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = true
patch_without_tag = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.tools]
match = "tools"
prerelease = true
prerelease_token = "rc"
